--- a/Styles/miscellaneous.css
+++ b/Styles/miscellaneous.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 .support {
   position: fixed;
   bottom: 5px;
@@ -37,4 +38,6 @@ ul :first-child {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
+  
 }
