--- a/Styles/grid.css
+++ b/Styles/grid.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -37,4 +38,5 @@
   font-size: 12px;
   font-family: 'Mulish';
   line-height: 18px;
+  }
 }
