--- a/Styles/header.css
+++ b/Styles/header.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 body {
   margin: 0;
   height: 800px;
@@ -50,6 +51,7 @@ body {
   justify-content: center;
 }
 
+}
 
 .jumiafood-logo {
   width: 210px;
