--- a/Styles/newsletter.css
+++ b/Styles/newsletter.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 .newsletter {
   background-color: rgb(246, 139, 30);
   height:290px;
@@ -37,4 +38,5 @@
 
 .random {
   margin-bottom: 25px;
+}
 }
