--- a/Styles/order-food.css
+++ b/Styles/order-food.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 .order-food {
   display: flex;
   background-color: rgb(246, 139, 30);
@@ -50,4 +51,4 @@
   height: 100%;
 }
 
-
+}
