--- a/Styles/order-food.css
+++ b/Styles/order-food.css
@@ -1,9 +1,9 @@
 @media screen and (min-width: 1024px){
 .order-food {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgb(246, 139, 30);
-  height: 410px;
-
 }
 
 .food-app-mockup {
@@ -13,31 +13,33 @@
 }
 
 .order-food-text2 {
-  width: 530px;
+  padding-right: 20px;
   font-family: 'Mulish';
   line-height: 30px;
   font-size: 20px;
+  padding-bottom: 5px;
+  max-width: 580px;
 }
 
 .order-food-text1 {
-  width: 430px;
   font-family: 'Mulish';
   font-weight: bold;
   font-size: 40px;
   margin-bottom: 25px;
 }
 
+
+
 .order-food-text {
-  margin-left: 100px;
+  margin-left: 80px;
   margin-top: 40px;
-  margin-right: 75px;
   color: white;
 }
 
 .order-food button {
   width: 215px;
   height: 60px;
-  margin-top: 30px;
+  margin-top: 15px;
   margin-right: 10px;
   background-color: transparent;
   border-color: white;
@@ -51,4 +53,351 @@
   height: 100%;
 }
 
+.support {
+  position: fixed;
+  bottom: 5px;
+  
+  left: 40px;
+  width: 150px;
+  color: white;
+  background-color:rgb(246, 139, 30);
+  text-align: center;
+  padding: 15px 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-weight: bolder;
+  font-family: 'Mulish';
 }
+
+ul {
+  font-family: 'Mulish';
+  font-size: 14px;
+  
+}
+
+ul > * {
+  color: rgb(212, 205, 205);
+  margin-top: 2px;
+}
+
+ul :first-child {
+  font-size: 16px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  margin-top: 80px;
+  color: white;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1190px){
+  .order-food {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(246, 139, 30);
+  }
+  
+  .food-app-mockup {
+    height: 580px;
+    margin-top: -100px;
+    z-index: 100;
+  }
+  
+  .order-food-text2 {
+    padding-right: 20px;
+    font-family: 'Mulish';
+    line-height: 30px;
+    font-size: 20px;
+    padding-bottom: 5px;
+    max-width: 580px;
+  }
+  
+  .order-food-text1 {
+    font-family: 'Mulish';
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 25px;
+  }
+  
+  
+  
+  .order-food-text {
+    margin-left: 80px;
+    margin-top: 40px;
+    color: white;
+  }
+  
+  .order-food button {
+    width: 215px;
+    height: 60px;
+    margin-top: 15px;
+    margin-right: 10px;
+    background-color: transparent;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+  }
+  
+  .footer {
+    background-color: rgb(42, 42, 42);
+    height: 100%;
+  }
+
+
+  .support {
+    position: fixed;
+    bottom: 5px;
+    
+    left: 40px;
+    width: 150px;
+    color: white;
+    background-color:rgb(246, 139, 30);
+    text-align: center;
+    padding: 15px 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-weight: bolder;
+    font-family: 'Mulish';
+  }
+  
+  ul {
+    font-family: 'Mulish';
+    font-size: 14px;
+    
+  }
+  
+  ul > * {
+    color: rgb(212, 205, 205);
+    margin-top: 2px;
+  }
+  
+  ul :first-child {
+    font-size: 16px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 80px;
+    color: white;
+  }
+  
+  .footer-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (min-width: 730px) and (max-width: 1030px){
+  .food-app-mockup {
+    display: none;
+  }
+
+  .order-food {
+    display: flex;
+    align-items: center;
+    background-color: rgb(246, 139, 30);
+    justify-content: center;
+  }
+  
+  
+  
+  .order-food-text2 {
+    padding-right: 20px;
+    font-family: 'Mulish';
+    line-height: 30px;
+    font-size: 20px;
+    padding-bottom: 5px;
+    max-width: 580px;
+    display: none;
+  }
+  
+  .order-food-text1 {
+    font-family: 'Mulish';
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+  
+  
+  
+  .order-food-text {
+    padding: 40px;
+    color: white;
+  }
+  
+  .order-food button {
+    width: 215px;
+    height: 60px;
+    margin-top: 15px;
+    margin-right: 10px;
+    background-color: transparent;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+  }
+  
+  .footer {
+    background-color: rgb(42, 42, 42);
+    height: 100%;
+  }
+
+
+  .support {
+    position: fixed;
+    bottom: 5px;
+    
+    left: 40px;
+    width: 150px;
+    color: white;
+    background-color:rgb(246, 139, 30);
+    text-align: center;
+    padding: 15px 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-weight: bolder;
+    font-family: 'Mulish';
+    display: none;
+  }
+  
+  ul {
+    font-family: 'Mulish';
+    font-size: 14px;
+    
+  }
+  
+  ul > * {
+    color: rgb(212, 205, 205);
+    margin-top: 2px;
+  }
+  
+  ul :first-child {
+    font-size: 16px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 80px;
+    color: white;
+  }
+  
+  .footer-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 350px){
+  .food-app-mockup {
+    display: none;
+  }
+
+  .order-food {
+    display: flex;
+    align-items: center;
+    background-color: rgb(246, 139, 30);
+    justify-content: center;
+  }
+  .order-food-text2 {
+    padding-right: 20px;
+    font-family: 'Mulish';
+    line-height: 30px;
+    font-size: 20px;
+    padding-bottom: 5px;
+    max-width: 580px;
+    display: none;
+  }
+  
+  .order-food-text1 {
+    font-family: 'Mulish';
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
+  .app-button {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+  }
+  
+  .order-food-text {
+    padding: 20px;
+    color: white;
+  }
+  
+  .order-food button {
+    width: 215px;
+    height: 60px;
+    margin-top: 15px;
+    margin-right: 10px;
+    background-color: transparent;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+  }
+  
+  .footer {
+    background-color: rgb(42, 42, 42);
+    height: 100%;
+  }
+
+  .support {
+    position: fixed;
+    bottom: 5px;
+    
+    left: 40px;
+    width: 150px;
+    color: white;
+    background-color:rgb(246, 139, 30);
+    text-align: center;
+    padding: 15px 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-weight: bolder;
+    font-family: 'Mulish';
+    display: none;
+  }
+  
+  ul {
+    font-family: 'Mulish';
+    font-size: 14px;
+    
+  }
+  
+  ul > * {
+    color: rgb(212, 205, 205);
+    margin-top: 2px;
+  }
+  
+  ul :first-child {
+    font-size: 16px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 80px;
+    color: white;
+  }
+  
+  .footer-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
+  .footer {
+    background-color: rgb(42, 42, 42);
+    height: 100%;
+  }
+}
+
