--- a/Styles/first-section.css
+++ b/Styles/first-section.css
@@ -236,7 +236,7 @@
       
 }
 
-@media screen and (min-width: 730px) and (max-width: 760px){
+@media screen and (min-width: 730px) and (max-width: 1024px){
   
   .right-splash, .left-splash {
     display: none;
@@ -341,7 +341,7 @@
     }
 }
 
-@media screen and (min-width: 760px) and (max-width: 1024px){
+@media screen and  (max-width: 730px){
   
   .right-splash, .left-splash {
     display: none;
